# robot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  requirements.txt
.cursor/rules/: arm-control.mdc  config-conventions.mdc  context-management.mdc  hardware-drivers.mdc  project-overview.mdc
.github/workflows/: deploy-robot.yml
arm/: arm.py
config/: robot.yaml
cortex/: Cargo.toml
cortex/src/: arm.rs  config.rs  motor.rs  safety.rs
cortex/tests/: homing_test.rs  motor_test.rs  safety_tests.rs  sweep_tests.rs
deploy/: renew-tailscale-cert.sh  tailscale-https.md
hw/: __init__.py  motor.py  robstride_bus.py
link/: .prettierrc  README.md  package-lock.json  package.json  vite.config.ts
link-server/: Cargo.toml
link-server/src/: api.rs  lib.rs  main.rs  telemetry.rs
link/src/: main.tsx  routeTree.gen.ts
link/src/components/: HomingStatusCard.tsx  MotorCard.tsx  MotorControl.tsx  PreflightAlert.tsx  PreflightSoftNotice.tsx  TelemetryChart.tsx
link/src/lib/: api.ts
link/src/lib/mutations/: robot.ts
link/src/lib/queries/: hooks.ts  index.ts  keys.ts
link/src/routes/: __root.tsx  arms.tsx  index.tsx  logs.tsx  motor.$id.tsx  settings.tsx  system.tsx  test.tsx
link/src/stores/: telemetry.ts
navi/: Cargo.toml
navi/src/: api.rs  lib.rs  log_buffer.rs  main.rs  telemetry.rs
robstride-local/src/: actuator.rs  lib.rs  transport.rs
src/: arm.rs  config.rs  motor.rs
tests/: conftest.py  probe_protocol.py  test_can2usb.py  test_client.py  test_connection.py  test_motor127.py  test_motor_api.py
