[package]
name = "navi"
version = "0.1.0"
edition = "2024"

[features]
default = []
socketcan = ["cortex/socketcan"]

[dependencies]
cortex = { path = "../cortex" }
robstride = { path = "../robstride-local" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sysinfo = "0.37"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
clap = { version = "4", features = ["derive"] }
wtransport = "0.7"
base64 = "0.22"

[[bin]]
name = "navi"
path = "src/main.rs"
